# PTV_Delay_prediction

./: .gitignore  main.py  pyproject.toml
ptv_train_project/: README.md  requirements.txt
ptv_train_project/dashboard/: app.py
ptv_train_project/scripts/: fetch_departures.py  preprocess_data.py  train_model.py
ptv_train_project/utils/: ptv_api.py
